# PDF-Maker

./: CMakeLists.txt  README.md  fonts.qrc  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myapp.rc  pdfcontrol.cpp  pdfcontrol.h
android/: AndroidManifest.xml
